--- a/homework/css/main.css
+++ b/homework/css/main.css
@@ -10,10 +10,11 @@ body {
     margin: 70px auto;
     border: 5px solid;
     padding: 15px;
+    text-align: center;
 }
 
 input {
-    display: inline-block;
+    display: table-row-group;
     margin: 10px;
 }
   
